--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,15 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
+
     }
+
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
+
+
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
@@ -24,14 +29,16 @@ repositories {
     maven { url "http://repo.spring.io/libs-release" }
 }
 
-
 dependencies {
-    compile group: "org.springframework.boot", name: "spring-boot-starter-web" 
-	compile group: 'org.apache.camel', name: 'camel-spring-boot-starter', version: '2.17.0'
+    compile group: "org.springframework.boot", name: "spring-boot-starter-web"
+	compile group: 'org.apache.camel', name: 'camel-spring-boot-starter', version: '2.19.0'
     compile group: "org.apache.activemq", name: 'activemq-camel'
-
+    compile group: 'uk.co.jemos.podam', name: 'podam', version: '7.2.0.RELEASE'
+    compile group: 'org.apache.camel', name: 'camel-xstream', version: '2.23.0'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.11'
+springBoot {
+    mainClass = "ru.mvn.Application"
 }
+
